@@ -1,4 +1,7 @@
 2007-06-28  Hubert Figuiere  <hub@figuiere.net>
 
+	* New API wrapped: xmp_serialize{,_and_format}() and the
+	corresponding option bits
+
 	* New API wrapped: xmp_get_array_item()
 
